// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageLayout Component should render a basic component: basic 1`] = `
<PageLayout>
  <PageSection
    className="curiosity"
  >
    <section
      className="pf-c-page__main-section curiosity"
    >
      <span
        className="test"
        key=".0"
      >
        lorem
      </span>
    </section>
  </PageSection>
</PageLayout>
`;

exports[`PageLayout Component should render header and section children: multiple children 1`] = `
<PageLayout>
  <PageHeader
    key=".1"
  >
    <PageHeader>
      <section
        className="pf-l-page-header pf-c-page-header pf-l-page__main-section pf-c-page__main-section pf-m-light"
        widget-type="InsightsPageHeader"
      >
        <PageHeaderTitle
          title="lorem"
        >
          <Title
            className=""
            size="2xl"
            widget-type="InsightsPageHeaderTitle"
          >
            <h1
              className="pf-c-title pf-m-2xl"
              widget-type="InsightsPageHeaderTitle"
            >
               
              lorem
               
            </h1>
          </Title>
        </PageHeaderTitle>
      </section>
    </PageHeader>
  </PageHeader>
  <PageSection
    className="curiosity"
  >
    <section
      className="pf-c-page__main-section curiosity"
    >
      <PageSection
        key=".0"
      >
        <Section>
          <section
            className=""
          >
             
            ipsum
             
          </section>
        </Section>
      </PageSection>
    </section>
  </PageSection>
</PageLayout>
`;
